--- a/package.json
+++ b/package.json
@@ -9,22 +9,39 @@
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --plugin-search-dir . --check .",
-		"format": "prettier --plugin-search-dir . --write ."
+		"format": "prettier --plugin-search-dir . --write .",
+		"generate": "drizzle-kit generate:pg"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.20.4",
 		"autoprefixer": "^10.4.14",
+		"drizzle-kit": "^0.19.13",
 		"postcss": "^8.4.24",
 		"postcss-load-config": "^4.0.1",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.10.1",
 		"svelte": "^4.0.5",
 		"svelte-check": "^3.4.3",
+		"sveltekit-superforms": "^1.6.0",
 		"tailwindcss": "^3.3.2",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
-		"vite": "^4.4.2"
+		"vite": "^4.4.2",
+		"zod": "^3.22.2"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@lucia-auth/adapter-postgresql": "^2.0.0",
+		"bits-ui": "^0.0.24",
+		"clsx": "^2.0.0",
+		"dotenv": "^16.3.1",
+		"drizzle-orm": "^0.28.2",
+		"lucia": "^2.3.0",
+		"lucide-svelte": "^0.268.0",
+		"postgres": "^3.3.5",
+		"tailwind-merge": "^1.14.0",
+		"tailwind-variants": "^0.1.13",
+		"tailwindcss-animate": "^1.0.6"
+	}
 }
